[gd_scene load_steps=2 format=3 uid="uid://card_visual_001"]

[ext_resource type="Script" path="res://scripts/ui/card_visual.gd" id="1"]

[node name="CardVisual" type="Control"]
custom_minimum_size = Vector2(120, 160)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 160.0
script = ExtResource("1")

[node name="BorderPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="CostCircle" type="Panel" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 40.0

[node name="CostLabel" type="Label" parent="CostCircle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 45.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 28.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.94, 0.94, 0.94, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ArtContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -30.0
offset_right = 50.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArtPlaceholder" type="ColorRect" parent="ArtContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.4, 1)

[node name="ArtTexture" type="TextureRect" parent="ArtContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="DescriptionLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -45.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 9
text = "Card description text goes here. It will be truncated if too long."
autowrap_mode = 2
